--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@ body {
  <!-- Navigation and Video Samples -->
 <div class="video-samples">
   <div class="slide-container">
+
     <!-- Slide for 'weight' folder -->
     <div class="slide">
       <!-- Real GIF -->
@@ -636,117 +637,131 @@ body {
       </div>
     </div>
 
-    
-      <!-- Slide for 'paint' folder -->
-      <div class="slide">
-    <div class="real-video">
-          <img src="../paint/real_paint.gif"></img>
-          <div class="caption">Real Test Frames</div>
-        </div>
-        <div class="frame">
-          <img src="../paint/vp_m_paint.gif" alt="VideoPoet (multiframe)"></img>
-          <div class="caption">VideoPoet (multiframe)</div>
-        </div>
-        <div class="frame">
-          <img src="../paint/vp_i2v_paint.gif" alt="VideoPoet (i2v)"></img>
-          <div class="caption">VideoPoet (i2v)</div>
-        </div>
-        <div class="frame">
-          <img src="../paint/sora_paint.gif" alt="Sora (i2v)"></img>
-          <div class="caption">Sora (i2v)</div>
-        </div>
-        <div class="frame">
-          <img src="../paint/pika_paint.gif" alt="Pika 1.0 (i2v)"></img>
-          <div class="caption">Pika 1.0 (i2v)</div>
-        </div>
-        <div class="frame">
-          <img src="../paint/runway_paint.gif" alt="Runway Gen 3 (i2v)"></img>
-          <div class="caption">Runway Gen 3 (i2v)</div>
-        </div>
-        <div class="frame">
-          <img src="../paint/lum_m_paint.gif" alt="Lumiere (multiframe)"></img>
-          <div class="caption">Lumiere (multiframe)</div>
-        </div>
-        <div class="frame">
-          <img src="../paint/lum_i2v_paint.gif" alt="Lumiere (i2v)"></img>
-          <div class="caption">Lumiere (i2v)</div>
-        </div>
+    <!-- Slide for 'paint' folder -->
+    <div class="slide">
+      <!-- Real GIF -->
+      <div class="real-video">
+        <img src="../paint/real_paint.gif" alt="Real Test Frames">
+        <div class="caption">Real Test Frames</div>
       </div>
 
-      <!-- Slide for 'teapot' folder -->
-      <div class="slide">
-    <div class="real-video">
-          <img src="../teapot/real_teapot.gif" controls autoplay loop muted"></img>
-          <div class="caption">Real Test Frames</div>
-        </div>
+      <!-- Generated GIFs -->
+      <div class="gif-grid">
         <div class="frame">
-          <img src="../teapot/vp_m_teapot.gif" alt="VideoPoet (multiframe)"></img>
+          <img src="../paint/vp_m_paint.gif" alt="VideoPoet (multiframe)">
           <div class="caption">VideoPoet (multiframe)</div>
         </div>
         <div class="frame">
-          <img src="../teapot/vp_i2v_teapot.gif" alt="VideoPoet (i2v)"></img>
+          <img src="../paint/vp_i2v_paint.gif" alt="VideoPoet (i2v)">
           <div class="caption">VideoPoet (i2v)</div>
         </div>
         <div class="frame">
-          <img src="../teapot/sora_teapot.gif" alt="Sora (i2v)"></img>
+          <img src="../paint/sora_paint.gif" alt="Sora (i2v)">
           <div class="caption">Sora (i2v)</div>
         </div>
         <div class="frame">
-          <img src="../teapot/pika_teapot.gif" alt="Pika 1.0 (i2v)"></img>
+          <img src="../paint/pika_paint.gif" alt="Pika 1.0 (i2v)">
           <div class="caption">Pika 1.0 (i2v)</div>
         </div>
         <div class="frame">
-          <img src="../teapot/runway_teapot.gif" alt="Runway Gen 3 (i2v)"></img>
+          <img src="../paint/runway_paint.gif" alt="Runway Gen 3 (i2v)">
           <div class="caption">Runway Gen 3 (i2v)</div>
         </div>
         <div class="frame">
-          <img src="../teapot/lum_m_teapot.gif" alt="Lumiere (multiframe)"></img>
+          <img src="../paint/lum_m_paint.gif" alt="Lumiere (multiframe)">
           <div class="caption">Lumiere (multiframe)</div>
         </div>
         <div class="frame">
-          <img src="../teapot/lum_i2v_teapot.gif" alt="Lumiere (i2v)"></img>
+          <img src="../paint/lum_i2v_paint.gif" alt="Lumiere (i2v)">
           <div class="caption">Lumiere (i2v)</div>
         </div>
       </div>
-
-      <!-- Slide for 'match' folder -->
-      <div class="slide">
-    <div class="real-video">
-          <img src="../match/real_match.gif" ></img>
-          <div class="caption">Real Test Frames</div>
-        </div>
-        <div class="frame">
-          <img src="../match/vp_m_match.gif" alt="VideoPoet (multiframe)"></img>
-          <div class="caption">VideoPoet (multiframe)</div>
-        </div>
-        <div class="frame">
-          <img src="../match/vp_i2v_match.gif" alt="VideoPoet (i2v)"></img>
-          <div class="caption">VideoPoet (i2v)</div>
-        </div>
-        <div class="frame">
-          <img src="../match/sora_match.gif" alt="Sora (i2v)"></img>
-          <div class="caption">Sora (i2v)</div>
-        </div>
-        <div class="frame">
-          <img src="../match/pika_match.gif" alt="Pika 1.0 (i2v)"></img>
-          <div class="caption">Pika 1.0 (i2v)</div>
-        </div>
-        <div class="frame">
-          <img src="../match/runway_match.gif" alt="Runway Gen 3 (i2v)"></img>
-          <div class="caption">Runway Gen 3 (i2v)</div>
-        </div>
-        <div class="frame">
-          <img src="../match/lum_m_match.gif" alt="Lumiere (multiframe)"></img>
-          <div class="caption">Lumiere (multiframe)</div>
-        </div>
-        <div class="frame">
-          <img src="../match/lum_i2v_match.gif" alt="Lumiere (i2v)"></img>
-          <div class="caption">Lumiere (i2v)</div>
-        </div>
-      </div>
-      
     </div>
+
+    <!-- Slide for 'teapot' folder -->
+    <div class="slide">
+      <!-- Real GIF -->
+      <div class="real-video">
+        <img src="../teapot/real_teapot.gif" alt="Real Test Frames">
+        <div class="caption">Real Test Frames</div>
+      </div>
+
+      <!-- Generated GIFs -->
+      <div class="gif-grid">
+        <div class="frame">
+          <img src="../teapot/vp_m_teapot.gif" alt="VideoPoet (multiframe)">
+          <div class="caption">VideoPoet (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/vp_i2v_teapot.gif" alt="VideoPoet (i2v)">
+          <div class="caption">VideoPoet (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/sora_teapot.gif" alt="Sora (i2v)">
+          <div class="caption">Sora (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/pika_teapot.gif" alt="Pika 1.0 (i2v)">
+          <div class="caption">Pika 1.0 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/runway_teapot.gif" alt="Runway Gen 3 (i2v)">
+          <div class="caption">Runway Gen 3 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/lum_m_teapot.gif" alt="Lumiere (multiframe)">
+          <div class="caption">Lumiere (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/lum_i2v_teapot.gif" alt="Lumiere (i2v)">
+          <div class="caption">Lumiere (i2v)</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Slide for 'match' folder -->
+    <div class="slide">
+      <!-- Real GIF -->
+      <div class="real-video">
+        <img src="../match/real_match.gif" alt="Real Test Frames">
+        <div class="caption">Real Test Frames</div>
+      </div>
+
+      <!-- Generated GIFs -->
+      <div class="gif-grid">
+        <div class="frame">
+          <img src="../match/vp_m_match.gif" alt="VideoPoet (multiframe)">
+          <div class="caption">VideoPoet (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/vp_i2v_match.gif" alt="VideoPoet (i2v)">
+          <div class="caption">VideoPoet (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/sora_match.gif" alt="Sora (i2v)">
+          <div class="caption">Sora (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/pika_match.gif" alt="Pika 1.0 (i2v)">
+          <div class="caption">Pika 1.0 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/runway_match.gif" alt="Runway Gen 3 (i2v)">
+          <div class="caption">Runway Gen 3 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/lum_m_match.gif" alt="Lumiere (multiframe)">
+          <div class="caption">Lumiere (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/lum_i2v_match.gif" alt="Lumiere (i2v)">
+          <div class="caption">Lumiere (i2v)</div>
+        </div>
+      </div>
+    </div>
+
   </div>
+</div>
 
 
  
