--- a/index.html
+++ b/index.html
@@ -297,31 +297,31 @@ body {
 
   .real-video {
   display: flex;
-  justify-content: center; /* Center the real video horizontally */
-  align-items: center; /* Center the content vertically */
-  margin-bottom: 20px; /* Add space below the real video */
-  width: 100%;
+  flex-direction: column;
+  align-items: center; /* Centers the content horizontally */
+  margin-bottom: 20px; /* Adds space below the real GIF */
 }
 
 .real-video img {
-  max-width: 800px; /* Set a maximum width for the real GIF */
+  max-width: 800px; /* Set a maximum width for the GIF */
   height: auto; /* Maintain aspect ratio */
   border-radius: 10px; /* Optional: Rounded corners */
 }
 
 .real-video .caption {
-  text-align: center;
   font-size: 1rem;
   color: #666;
   margin-top: 5px;
+  text-align: center;
 }
 
 .gif-grid {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); /* Keep the grid for generated GIFs */
+  grid-template-columns: repeat(4, 1fr); /* 4 columns for generated GIFs */
   gap: 10px; /* Adjust spacing between GIFs */
   justify-content: center; /* Center the grid horizontally */
 }
+
 
 
   
