--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ body {
     <!-- Slide for 'weight' folder -->
     <div class="slide">
       <!-- Real GIF -->
-      <div class="frame">
+      <div class="real-video">
         <img src="../weight/real_weight.gif" alt="Real Test Frames">
         <div class="caption">Real Test Frames</div>
       </div>
