--- a/index.html
+++ b/index.html
@@ -327,27 +327,24 @@ body {
 
 
   
-/* Individual video frame */
+/* Frame (Individual GIF Styling) */
 .frame {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 200px; /* Adjust as needed for consistent size */
 }
 
-/* Style for video or GIF */
 .frame img {
   width: 100%;
   height: auto;
-  border-radius: 0.5rem;
+  border-radius: 10px; /* Optional: Rounded corners */
 }
 
-/* Caption for videos */
-.caption {
-  font-size: 0.9rem;
-  color: #666;
-  margin-top: 0.5rem;
+.frame .caption {
   text-align: center;
+  font-size: 0.9rem;
+  margin-top: 5px;
+  color: #666;
 }
 
 
