--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@ body {
 
 /* Individual slide */
   /* Updated slide styles for real video and two rows of generated videos */
-  .slide {
+.slide {
     display: grid;
     grid-template-rows: auto auto auto; /* 3 rows: 1 for real, 2 for generated */
-    grid-template-columns: repeat(3, 1fr); /* 3 videos per row for generated */
+    grid-template-columns: repeat(4, 1fr); /* 4 videos per row for generated */
     gap: 1rem; /* Space between videos */
     padding: 1rem;
     box-sizing: border-box;
@@ -296,10 +296,9 @@ body {
   }
 
   .real-video {
-  max-width: 800px; /* Limit the width of the video */
-  margin: 0 auto; /* Center the video horizontally */
-  text-align: center; /* Center the content inside the div */
-}
+    grid-column: 1 / -1; /* Span all columns for the real video */
+    justify-self: center; /* Center the real video horizontally */
+  }
 
   
 /* Individual video frame */
