--- a/index.html
+++ b/index.html
@@ -237,32 +237,33 @@ body {
        Also, we can saturate the shading color more (a darker gray).
     */
      /* Progress bar styles */
-  .progress {
-    background-color: #e0e0e0; /* Light gray for background */
-    border-radius: 5px;
-    height: 20px;
-    position: relative;
-    overflow: hidden;
-  }
+.progress {
+  background-color: #e0e0e0; /* Light gray for background */
+  border-radius: 5px;
+  height: 20px;
+  position: relative;
+  overflow: hidden;
+}
+
 .progress-bar {
   height: 100%;
   border-radius: 5px;
-  text-align: right; /* Align text to the right (empty portion of the bar) */
-  position: relative; /* Enable positioning of the text */
-  font-size: 12px; /* Font size for percentage text */
-  background-color: #007bff; /* Color of the filled portion */
-  color: white; /* Color for filled text (if needed) */
+  text-align: center;
+  color: white; /* Text color inside the filled portion */
+  font-size: 12px;
+  line-height: 20px;
+  position: relative;
 }
 
-.progress-bar::after {
-  content: attr(data-score); /* Display the percentage from the data-score attribute */
+.progress-label {
   position: absolute;
-  top: 50%; /* Vertically center the text */
-  right: 5px; /* Position the text in the empty portion of the bar */
-  transform: translateY(-50%); /* Adjust vertical alignment */
-  font-weight: bold; /* Make the text bold for better visibility */
-  color: black; /* Set text color to black for the empty portion */
+  top: 0;
+  right: 5px; /* Adjust to ensure the text stays within the unfilled area */
+  font-size: 12px;
+  color: black; /* Black text for the unfilled area */
+  line-height: 20px; /* Align vertically with the bar height */
 }
+
 
 
   
