--- a/index.html
+++ b/index.html
@@ -504,7 +504,8 @@ body {
         <td>VideoPoet (multiframe) <span style="color:gold;">&#x1F3C6;</span></td>
         <td>
           <div class="progress">
-            <div class="progress-bar" style="width:20.7%; background-color:#CC5500;" data-score="24.1%"></div>
+            <div class="progress-bar" style="width:20.7%; background-color:#CC5500;"></div>
+            <div class="progress-label">24.1%</div>
           </div>
         </td>
       </tr>
@@ -512,7 +513,8 @@ body {
         <td>Runway Gen 3 (i2v)</td>
         <td>
           <div class="progress">
-            <div class="progress-bar" style="width:18.4%; background-color:#2ca02c;" data-score="16.2%"></div>
+            <div class="progress-bar" style="width:18.4%; background-color:#2ca02c;"></div>
+            <div class="progress-label">16.2%</div>
           </div>
         </td>
       </tr>
@@ -520,7 +522,8 @@ body {
         <td>Lumiere (multiframe)</td>
         <td>
           <div class="progress">
-            <div class="progress-bar" style="width:18.2%; background-color:#1C69A7;" data-score="15.7%"></div>
+            <div class="progress-bar" style="width:18.2%; background-color:#1C69A7;"></div>
+            <div class="progress-label">15.7%</div>
           </div>
         </td>
       </tr>
@@ -528,7 +531,8 @@ body {
         <td>VideoPoet (i2v)</td>
         <td>
           <div class="progress">
-            <div class="progress-bar" style="width:15%; background-color:#FF7F0E;" data-score="18.0%"></div>
+            <div class="progress-bar" style="width:15%; background-color:#FF7F0E;"></div>
+            <div class="progress-label">18.0%</div>
           </div>
         </td>
       </tr>
@@ -536,7 +540,8 @@ body {
         <td>Lumiere (i2v)</td>
         <td>
           <div class="progress">
-            <div class="progress-bar" style="width:11.9%; background-color:#17BECF;" data-score="17.1%"></div>
+            <div class="progress-bar" style="width:11.9%; background-color:#17BECF;"></div>
+            <div class="progress-label">17.1%</div>
           </div>
         </td>
       </tr>
@@ -544,7 +549,8 @@ body {
         <td>Stable Video Diffusion (i2v)</td>
         <td>
           <div class="progress">
-            <div class="progress-bar" style="width:10.9%; background-color:#9467BD;" data-score="13.5%"></div>
+            <div class="progress-bar" style="width:10.9%; background-color:#9467BD;"></div>
+            <div class="progress-label">13.5%</div>
           </div>
         </td>
       </tr>
@@ -552,7 +558,8 @@ body {
         <td>Pika 1.0 (i2v)</td>
         <td>
           <div class="progress">
-            <div class="progress-bar" style="width:9.5%; background-color:#FFD700; color:black;" data-score="9.2%"></div>
+            <div class="progress-bar" style="width:9.5%; background-color:#FFD700; color:black;"></div>
+            <div class="progress-label">9.2%</div>
           </div>
         </td>
       </tr>
@@ -560,13 +567,15 @@ body {
         <td>Sora (i2v)</td>
         <td>
           <div class="progress">
-            <div class="progress-bar" style="width:8.7%; background-color:#ff0606;" data-score="8.8%"></div>
+            <div class="progress-bar" style="width:8.7%; background-color:#ff0606;"></div>
+            <div class="progress-label">8.8%</div>
           </div>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
+
     
   <!-- Samples Section -->
   <div class="section-wrapper">
