--- a/index.html
+++ b/index.html
@@ -407,6 +407,9 @@ body {
       <a class="btn-link" href="#" target="_blank">
         <img src="assets/data-logo.png" alt="Data Logo" class="logo">Data
       </a>
+        <a class="btn-link" href="#podcast-section">
+    <img src="" alt="Podcast Logo" class="logo logo-original">Podcast 📻
+  </a>
     </div>
 
 
@@ -475,18 +478,17 @@ body {
     </div>
 
 
-<div class="section-wrapper">
+<div id="podcast-section" class="section-wrapper">
   <h2>Podcast 📻</h2>
-      <p>
-                    On a run and want to get a gist of our paper? Listen to the following podcast!
-      </p>
-  </div>
-    
-<audio controls>
-  <p>Listen to this cool episode on Physics-IQ benchmarking.</p>
-  <source src="assets/pod.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+  <p>
+    On a run and want to get a gist of our paper? Listen to the following podcast!
+  </p>
+  <audio controls>
+    <p>Listen to this cool episode on Physics-IQ benchmarking.</p>
+    <source src="assets/pod.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
 
 
        <!-- Leaderboard -->
