--- a/index.html
+++ b/index.html
@@ -329,6 +329,21 @@ body {
   text-align: center;
 }
 
+.podcast-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centers items horizontally */
+  justify-content: center; /* Ensures vertical centering if needed */
+  text-align: center; /* Centers the text */
+}
+
+.podcast-center p {
+  margin: 0 0 1rem; /* Add spacing below the text */
+}
+
+.podcast-center audio {
+  margin-top: 1rem; /* Add spacing above the audio player */
+}
 
 
     .arrow {
@@ -354,7 +369,7 @@ body {
     .arrow-right {
       right: 30px;
     }
-
+    
     footer {
       margin: 2rem 0;
       color: #999;
@@ -408,7 +423,7 @@ body {
         <img src="assets/data-logo.png" alt="Data Logo" class="logo">Data
       </a>
         <a class="btn-link" href="#podcast-section">
-    <img src="" alt="Podcast Logo" class="logo logo-original">Podcast 📻
+    Podcast 📻
   </a>
     </div>
 
@@ -478,7 +493,7 @@ body {
     </div>
 
 
-<div id="podcast-section" class="section-wrapper">
+<div id="podcast-section" class="section-wrapper podcast-center">
   <h2>Podcast 📻</h2>
   <p>
     On a run and want to get a gist of our paper? Listen to the following podcast!
