--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ body {
 <!-- Footer Logo -->
 <footer>
   <p>Thank you for visiting our benchmark!</p>
-  <img src="../assets/gdm_logo.jpg" alt="Physics-IQ Logo" style="max-width: 250px; height: auto; margin-top: 1rem;">
+  <img src="../assets/gdm_logo.png" alt="Physics-IQ Logo" style="max-width: 250px; height: auto; margin-top: 1rem;">
 </footer>
 
 
