--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ body {
     <!-- Buttons -->
     <div class="buttons">
       <!-- Replace # with actual links -->
-      <a class="btn-link" href="#" target="_blank">
+      <a class="btn-link" href="https://arxiv.org/abs/2501.09038" target="_blank">
         <img src="assets/arxiv-logo.png" alt="arXiv Logo" class="logo logo-original">Paper
       </a>
       <a class="btn-link" href="https://github.com/google-deepmind/physics-IQ-benchmark" target="_blank">
