--- a/index.html
+++ b/index.html
@@ -414,7 +414,10 @@ body {
     <div class="buttons">
       <!-- Replace # with actual links -->
       <a class="btn-link" href="https://arxiv.org/abs/2501.09038" target="_blank">
-        <img src="assets/arxiv-logo.png" alt="arXiv Logo" class="logo logo-original">Paper
+        <img src="assets/arxiv.jpg" alt="arXiv Logo" class="logo logo-original">Paper
+      </a>
+      <a class="btn-link" href="https://arxiv.org/abs/2501.09038" target="_blank">
+      PDF 📃
       </a>
       <a class="btn-link" href="https://github.com/google-deepmind/physics-IQ-benchmark" target="_blank">
         <img src="assets/github-logo.png" alt="GitHub Logo" class="logo logo-bigger">Code
